style.css
* {
  margin: 0 auto;
  font-family: 'Lato', sans-serif;
}

a {
  text-decoration: none;
  color: #FECB03;
}

header {
  position: fixed;
  top: 0;
  z-index: 1;
  width: 100%;
  background-color:#192553;
  /* background-color:gray; */
  height: 60px;
  color: #FECB03;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header #app-name {
  width: 90%;
  text-align: center;
}

#logo {
  width: 50px;
  height: 50px;
  object-fit: cover;
  -webkit-transition: -webkit-transform .8s ease-in-out;
          transition:         transform .8s ease-in-out;
}
#logo:hover {
  -webkit-transform: rotate(360deg);
          transform: rotate(360deg);
}
body {
  min-width: 800px;
}

main {
  margin-top: 60px;
  min-height: 800px;
  height: 100%;
  background-image: url("Pokemon_Trading_Card_Game_cardback.jpg");
  background-color: gray;
  color: white;
  text-align: center;
}

#search-section {
  display: inline-block;
  width: 600px;
  margin: 0 0 10px 0;
  padding: 10px;
}

#search-section h2 {
  margin: 10px;
}

#search-section input {
  margin-top: 10px;
    font-size: 1em;
}

#search-button {
  font-size: 1em;
  border: none;
  vertical-align: top;
  margin-top: 10px;
  height: 46px;
}

#search-button:hover {
  color: white;
  background-color:#192553;
}

#main-card-banner {
  width: 100%;
  /* background-color:#192553; */
  background-color:gray;
  height: 60px;
  display: none;
  align-items: center;
}

#main-card-banner-title {
  color: #FECB03;
}

#main-card {
  background-image: url("Pokemon_Trading_Card_Game_cardback.jpg");
}

#main-card-img {
  margin: 20px;
  height: 500px;
  object-fit: cover;
  background-color: white;
  padding: 10px;
}

#alt-card-banner {
  width: 100%;
  /* background-color:#192553; */
  background-color:gray;
  height: 60px;
  display: none;
  align-items: center;
}

#alt-card-banner-title {
  color: #FECB03;
}

#alt-card {
  background-image: url("Pokemon_Trading_Card_Game_cardback.jpg");  
}

#alt-card-img {
  margin: 20px;
  height: 250px;
  object-fit: cover;
  background-color: white;
  padding: 10px;
}

#evolution-card-banner {
  width: 100%;
  /* background-color:#192553; */
  background-color:gray;
  height: 60px;
  display: none;
  align-items: center;
}

#evolution-card-banner-title {
  color: #FECB03;
}

#evolution-card {
  background-image: url("Pokemon_Trading_Card_Game_cardback.jpg");  
  display: flex;
  align-items: center;
  display:none;
}

.evolution-card-header {
  margin-top: 20px;
  background-color: gray;
  padding: 10px;
  color: #FECB03;

}
.evolution-card-header-wrapper {
  margin: 20px 20px 0 20px  ;
}

.evolution-cards {
  margin: 20px;
  height: 250px;
  object-fit: cover;
  background-color: white;
  padding: 10px;
}

#evolution-arrow-1, #evolution-arrow-2 {
  width: 100px;
}
.double-arrow {
  width: 100%;
  /* object-fit: cover;
  padding: 10px; */
}

#evolution-card-1 {
  display: none;
}

#evolution-arrow-1 {
  display: none;
}

#evolution-card-2 {
  display: none;
}

#evolution-arrow-2 {
  display: none;
}

#evolution-card-3 {
  display: none;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8); 
}

.modal-content {
  background-color: white;
  margin: 25% auto; 
  padding: 10px;
  border: 1px solid lightgray;
  width: 50%; 
  color:black;
  font-size: 1.5em;
}

.close {
  color: black;
  float: right;
  font-size: .75em;
  font-weight: bold;
}

@media screen and (max-width: 800px) {
  html {
    font-size: 12px;
  }
}


/* The search field */
#my-input {
  box-sizing: border-box;
  /* background-image: url('searchicon.png'); */
  background-position: 14px 12px;
  background-repeat: no-repeat;
  font-size: 16px;
  padding: 14px 20px 12px 45px;
  border: none;
  border-bottom: 1px solid #ddd;
}

/* The search field when it gets focus/clicked on */
#my-input:focus {outline: 3px solid #ddd;}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content */
.dropdown-content {
  min-width: 230px;
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

#dropdown-list {
  max-height: 200px;
  overflow: auto;
  display: none;
  background-color: lightgray;
}

